@@ -1,5 +1,7 @@
 2004-05-20  Matthew Mueller  <donut@dakotacom.net>
 
+	* main/inferno.c: document -gl_refresh (d1x r1.20)
+
 	* arch/win32/joyhh.c, arch/win32/mouse.c: w32: check
 	-no(mouse|joystick) within respective _init() funcs (d1x r1.2,
 	r1.6)
